Added keyboard shortcut to open popup: Ctrl-Shift-L / ⌘-Shift-L

--- a/popup.html
+++ b/popup.html
@@ -110,9 +110,10 @@ This can be the same password you use for this identity on other devices."><span
 		<input type="radio" name="tab" value="8" id="tab8"/><label for="tab8">Help</label>
 		<div>
 			<label><span>Version</span><b id="version">0.0.0</b></label><br/>
-			<label><span>More info</span><a href="https://sqrl.grc.com" target="_blank">sqrl.grc.com</a></label><br/>
+			<label><span title="Keyboard shortcut to open this popup (use Command in stead of Control on Mac platform)">Keybd shortcut</span>Ctrl-Shift-L / ⌘-Shift-L</label><br/>
+			<label><span>SQRL Forum</span><a href="https://sqrl.grc.com" target="_blank">sqrl.grc.com</a></label><br/>
+			<br/>
 			<label><span>Abbreviations</span><dl><dt>Auth</dt><dd>Authentication requested</dd>
-<dt>COA</dt><dd>Cross-Origin Authentication attempt</dd>
 <dt>IDTY</dt><dd>Missing Identity</dd>
 <dt>PASS</dt><dd>Password required</dd>
 </dl></label><br/>
