Rename 'Identity Text' to 'Textual Identity'

--- a/popup.html
+++ b/popup.html
@@ -66,8 +66,8 @@ This can be the same password you use for this identity on other devices."><span
 		<input type="radio" name="tab" value="3" id="tab3"/><label for="tab3">Export Identity</label>
 		<div>
 			<form id="export">
-				<label><span>Identity Text</span><textarea name="identity" spellcheck="false" readonly></textarea></label><br/>
-				<label><span>Identity QR</span><img id="exportqr"/></label><br/>
+				<label><span>Textual Identity</span><textarea name="identity" spellcheck="false" readonly></textarea></label><br/>
+				<label><span>Identity QR Code</span><img id="exportqr"/></label><br/>
 			</form>
 		</div>
 	</div>
