Trim whitespace on textualIdentity import

--- a/popup.html
+++ b/popup.html
@@ -58,7 +58,7 @@ The Rescue Code should contain 6 groups of 4 digits, separated by a minus sign" 
 This can be the same password you use for this identity on other devices."><span>New password</span><input type="password" name="password"/></label><br/>
 				<label title="Repeat the password entered above"><span>Password again</span><input type="password" name="verifypassword"/></label><br/>
 				<label><span></span><progress value="0"></progress></label><br/>
-				<label><span></span><button>Save</button></label><br/>
+				<label><span></span><button>Save</button></label>
 			</form>
 		</div>
 	</div>
