Hide 'Change password' tab

--- a/popup.html
+++ b/popup.html
@@ -71,7 +71,7 @@ This can be the same password you use for this identity on other devices."><span
 			</form>
 		</div>
 	</div>
-	<div>
+	<!--div>
 		<input type="radio" name="tab" value="5" id="tab5"/><label for="tab5">Change Password</label>
 		<div>
 			<form id="changepassword" class="notyet">
@@ -83,7 +83,7 @@ This can be the same password you use for this identity on other devices."><span
 				<label><span></span><button>Save</button></label><br/>
 			</form>
 		</div>
-	</div>
+	</div-->
 	<div>
 		<input type="radio" name="tab" value="6" id="tab6"/><label for="tab6">Clear Data</label>
 		<div>
