Added IP_MISMATCH check

--- a/popup.html
+++ b/popup.html
@@ -118,6 +118,7 @@ This can be the same password you use for this identity on other devices."><span
 			<label><span title="These abbreviations will appear as badge text on the WebExtension's button in the top tight of your browser window.">Abbreviations</span><dl><dt>Auth</dt><dd>Authentication requested</dd>
 <dt>IDTY</dt><dd>Missing Identity</dd>
 <dt>PASS</dt><dd>Password required</dd>
+<dt>IPM</dt><dd>IP address mismatch</dd>
 </dl></label><br/>
 		</div>
 	</div>
