Welcome text for new users, let iso var

--- a/popup.html
+++ b/popup.html
@@ -122,6 +122,14 @@ This can be the same password you use for this identity on other devices."><span
 </dl></label><br/>
 		</div>
 	</div>
+	<div>
+		<input type="radio" name="tab" value="9" id="tab9"/><label for="tab9"></label>
+		<div>
+			Welcome to SQRL.<br/>
+			<br/>
+			Please <b>create</b> or <b>import</b> an identity by clicking on the corresponding menu item on the left.
+		</div>
+	</div>
 </div>
 </main>
 </body>
